--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/ferytell/Puk6/issues"
   },
-  "homepage": "https://github.com/ferytell/Puk6#readme"
+  "homepage": "https://github.com/ferytell/Puk6#readme",
+  "dependencies": {
+    "body-parser": "^1.20.0",
+    "express": "^4.18.1",
+    "mysql": "^2.18.1"
+  }
 }
